The disable_seamless_cube_map workaround should only apply to primary Intel.

On Mac retina where Intel is integrated and AMD/NVIDIA is discrete and is what
is used for WebGL, this workaround should not apply.

(This only affects WebGL2 on mac, so skip general try/cq bots)

BUG=606074,597794
TEST=mac gpu bots
R=bajones@chromium.org
NOTRY=true
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2081813002
Cr-Commit-Position: refs/heads/master@{#401344}

Former-commit-id: 60714ca531b4b2f90ceed1a69ec44e0847998694